--- a/PinYinTextObject/widget.ui
+++ b/PinYinTextObject/widget.ui
@@ -20,6 +20,9 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
+      <widget class="QLineEdit" name="lineEdit"/>
+     </item>
+     <item>
       <widget class="QPushButton" name="Text">
        <property name="text">
         <string>Text</string>
