--- a/PinYinTextObject/widget.ui
+++ b/PinYinTextObject/widget.ui
@@ -15,13 +15,10 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QTextEdit" name="textEdit"/>
+    <widget class="QTextEdit" name="textEdit_Source"/>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <widget class="QLineEdit" name="lineEdit"/>
-     </item>
      <item>
       <widget class="QPushButton" name="test">
        <property name="text">
@@ -44,6 +41,9 @@
       </widget>
      </item>
     </layout>
+   </item>
+   <item>
+    <widget class="QTextEdit" name="textEdit"/>
    </item>
   </layout>
  </widget>
