--- a/PinYinTextObject/widget.ui
+++ b/PinYinTextObject/widget.ui
@@ -17,6 +17,9 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
+      <widget class="QComboBox" name="comboBox"/>
+     </item>
+     <item>
       <widget class="QPushButton" name="test">
        <property name="text">
         <string>创建</string>
